bk_ida/gccida/g3/add_location_or_const_value_attribute
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9475:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8989, "add_location_or_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9517:9: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v21 = v6->m128i_i8[2]; 
      ~~^ ~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9518:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _DWORD *)&mode_class_0 + v20) != 2 ) 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9519:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8722, "add_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9525:17: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v27.r[2] = v6[2].m128i_i64[0]; 
           ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9527:13: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etardouble( v23, v27); 
            ^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/real.h:164:49: note: passing argument to parameter here
extern void etardouble          PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9535:17: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v25.r[2] = v6[2].m128i_i64[0]; 
           ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9541:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8713, "add_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9545:17: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v26.r[2] = v6[2].m128i_i64[0]; 
           ~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9548:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etartdouble( v23, v26); 
             ^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/real.h:162:50: note: passing argument to parameter here
extern void etartdouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9550:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etarldouble( v23, v26); 
             ^~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/real.h:163:50: note: passing argument to parameter here
extern void etarldouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9619:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 8757, "add_const_value_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/dwarf2out.c:9641:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9026, "add_location_or_const_value_attribute"); 
                             ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/add_location_or_const_value_attribute/src/obj/dwarf2out.o] Error 1
